--- a/home/index.html
+++ b/home/index.html
@@ -13,9 +13,9 @@
 
   <script>
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
+      apiKey: "AIzaSyDW0JNNunJiyhhmgYP4S31QE1SZffgmhto",
+      authDomain: "token-ea7cf.firebaseapp.com",
+      projectId: "token-ea7cf",
     };
 
     firebase.initializeApp(firebaseConfig);
