--- a/token/index.html
+++ b/token/index.html
@@ -49,7 +49,7 @@
 
         // พาไปหน้า secure.html พร้อม token
         setTimeout(() => {
-          window.location.href = `secure.html?token=${encodeURIComponent(token)}`;
+          window.location.href = `https://taithai-tai.github.io/test/home?token=${encodeURIComponent(token)}`;
         }, 800);
 
       } catch (err) {
