--- a/home/token.html
+++ b/home/token.html
@@ -46,7 +46,7 @@
 
       // เด้งไปหน้า secure.html พร้อมโทเคนใหม่
       setTimeout(() => {
-        window.location.href = `secure.html?token=${encodeURIComponent(newToken)}`;
+        window.location.href = `index.html?token=${encodeURIComponent(newToken)}`;
       }, 700);
     }
 
