--- a/home/testV2buttom.html
+++ b/home/testV2buttom.html
@@ -74,7 +74,9 @@
   <div class="card">
     <h1>ปุ่มทดสอบระบบ</h1>
     <p>กดปุ่มเพื่อทดสอบ Event, JS หรือการทำงานของปุ่มบนเซิร์ฟเวอร์</p>
-    <button class="btn" onclick="testClick()">กดเพื่อทดสอบ</button>
+    <button class="btn" onclick="window.open('https://www.google.com', '_blank');">
+    </button>
+
     <div id="result"></div>
   </div>
 
