--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,5 +1,8 @@
 <html>
   <boby>
-    
+    <scritp src="https://taithai.co/token.js"></scritp>
+    <scritp>
+      Token.create({ target: "testV2home.html"});
+    </scritp>
   </boby>
 </html>
