--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,8 +1,6 @@
 <html>
   <boby>
-    <scritp src="https://taithai.co/token.js"></scritp>
-    <scritp>
-      Token.create({ target: "testV2home.html" });
-    </scritp>
+    <script src="https://taithai.co/token.js"></script>
+    <script>Token.create({ target: "testV2home.html" });</script>
   </boby>
 </html>
