--- a/home/testV2home.html
+++ b/home/testV2home.html
@@ -271,6 +271,8 @@
   </style>
 </head>
 <body>
+  <script src="https://taithai.co/Token.js"></script>
+  <script>Token.guard({ tokenPage: "token.html"});</script>
   <main class="glass-card">
     <div class="corner-orb"></div>
     <div class="corner-orb-2"></div>
