--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,6 +1,8 @@
 <html>
   <boby>
     <script src="https://taithai.co/token.js"></script>
-    <script>Token.create({ target: "testV2home.html" });</script>
+    <script>
+      Token.create({ target: "testV2home.html" });
+    </script>
   </boby>
 </html>
