--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,8 +1,8 @@
 <html>
-  <boby>
+  <body>
     <script src="https://taithai.co/token.js"></script>
     <script>
       Token.create({ target: "testV2home.html" });
     </script>
-  </boby>
+  </body>
 </html>
