--- a/home/testV2home.html
+++ b/home/testV2home.html
@@ -273,7 +273,7 @@
 <body>
   <script src="https://taithai.co/Token.js"></script>
   <script>
-    Token.guard({ tokenPage: "token.html"});
+    Token.guard({ tokenPage: "testV2GenToken.html"});
   </script>
   <main class="glass-card">
     <div class="corner-orb"></div>
