--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,6 +1,8 @@
 <html>
   <body>
-    <script src="https://taithai.co/token.js"></script>
-    Token.create({ target: "testV2home.html" });
+    <<script src="https://taithai.co/token.js"></script>
+<script>
+Token.create({ target: "testV2home.html" });
+</script>
   </body>
 </html>
