--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,8 +1,9 @@
 <html>
   <body>
-    <<script src="https://taithai.co/token.js"></script>
-<script>
-Token.create({ target: "testV2home.html" });
-</script>
+    <script src="https://taithai.co/token.js"></script>
+    <script>
+      Token.create({ target: "testV2home.html" });
+    </script>
+
   </body>
 </html>
