--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <script src="https://taithai.co/token.js"></script>
+    <script src="https://taithai.co/app/token.js"></script>
     <script>
       Token.create({ target: "testV2home.html" });
     </script>
