--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,8 +1,8 @@
 <html>
-  <body>
-    <script src="https://taithai.co/app/token.js"></script>
-    <script>
-      Token.create({ target: "testV2home.html" });
-    </script>
-  </body>
+<body>
+  <script src="https://taithai-tai.github.io/token/token.js"></script>
+  <script>
+    Token.create({ target: "testV2home.html" });
+  </script>
+</body>
 </html>
