--- a/home/testV2home.html
+++ b/home/testV2home.html
@@ -271,10 +271,11 @@
   </style>
 </head>
 <body>
-  <script src="https://taithai.co/app/token.js"></script>
-  <script>
-    Token.guard({ tokenPage: "testV2GenToken.html" });
-  </script>
+  <script src="https://taithai-tai.github.io/token/token.js"></script>
+<script>
+  Token.guard({ tokenPage: "testV2GenToken.html" });
+</script>
+
   <main class="glass-card">
     <div class="corner-orb"></div>
     <div class="corner-orb-2"></div>
