--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <script src="https://taithai-tai.github.io/token/token.js"></script>
+  <script src="https://taithai-tai.github.io/app/token.js"></script>
   <script>
     Token.create({ target: "testV2home.html" });
   </script>
