--- a/home/testV2home.html
+++ b/home/testV2home.html
@@ -271,7 +271,7 @@
   </style>
 </head>
 <body>
-  <script src="https://taithai-tai.github.io/token/token.js"></script>
+  <script src="https://taithai-tai.github.io/app/token.js"></script>
 <script>
   Token.guard({ tokenPage: "testV2GenToken.html" });
 </script>
