--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,8 +1,11 @@
 <html>
 <body>
-  <script src="https://taithai-tai.github.io/app/token.js"></script>
-  <script>
-    Token.create({ target: "testV2home.html" });
-  </script>
+  <script src="https://taithai-tai.github.io/token/token.js"></script>
+    <script>
+      Token.guard({
+        tokenPage: "testV2GenToken.html",
+        cleanUrl: false   // 👈 เพิ่มบรรทัดนี้
+      });
+    </script>
 </body>
 </html>
