--- a/home/testV2home.html
+++ b/home/testV2home.html
@@ -272,9 +272,12 @@
 </head>
 <body>
   <script src="https://taithai-tai.github.io/app/token.js"></script>
-<script>
-  Token.guard({ tokenPage: "testV2GenToken.html" });
-</script>
+    <script>
+      Token.guard({
+        tokenPage: "testV2GenToken.html",
+        cleanUrl: false   // 👈 เพิ่มบรรทัดนี้
+      });
+    </script>
 
   <main class="glass-card">
     <div class="corner-orb"></div>
