--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -2,7 +2,8 @@
 <body>
   <script src="https://taithai-tai.github.io/app/token.js"></script>
     <script>
-        Token.create({ target: "testV2home.html" });
+        // ทุกครั้งที่เปิดหน้านี้ → สร้างโทเคนใหม่ แล้วส่งไปหน้า testV2home.html
+      Token.create({ target: "testV2home.html" });
     </script>
 </body>
 </html>
