--- a/home/testV2home.html
+++ b/home/testV2home.html
@@ -276,37 +276,32 @@
       const app = document.getElementById("app");
   
       Token.useOnce({
-        cleanUrl: false,   // ให้ token โผล่ใน URL ก่อน เพื่อดูว่ามันเดิมจริง ๆ
+        cleanUrl: false,   // ให้ token ยังอยู่ใน URL จะได้เห็นว่าเป็นตัวเดิม
   
-        // ✅ ใช้โทเคนครั้งแรก → ให้ผ่าน
         onFirstUse({ token }) {
           app.innerHTML = `
             🎉 ยินดีต้อนรับ!<br>
-            โทเคนนี้ใช้ได้ และเพิ่งถูกใช้ครั้งแรกในอุปกรณ์นี้<br>
-            <small>token: ${token}</small><br><br>
-            <b>เนื้อหาหน้าหลักของคุณอยู่ตรงนี้</b>
+            โทเค็นใช้งานครั้งแรกเรียบร้อยแล้ว<br>
+            <small>token: ${token}</small>
           `;
         },
   
-        // ⛔ ใช้โทเคนเดิมซ้ำ (เช่น Refresh)
         onAlreadyUsed({ token }) {
           app.innerHTML = `
-            ⛔ โทเคนนี้ถูกใช้ไปแล้วในอุปกรณ์นี้<br>
+            ⛔ โทเค็นนี้ถูกใช้ไปแล้วในอุปกรณ์นี้<br>
             <small>token: ${token}</small><br><br>
-            ถ้าต้องการเข้าใหม่ กรุณาไปที่ <b>testV2GenToken.html</b> เพื่อรับโทเคนใหม่
+            กรุณาไปที่ <b>testV2GenToken.html</b> เพื่อรับโทเค็นใหม่
           `;
         },
   
-        // ❌ โทเคนไม่ถูกต้อง / ไม่อยู่ใน store
         onInvalid(reason) {
           app.innerHTML = `
-            ❌ โทเคนไม่ถูกต้อง (${reason})<br><br>
+            ❌ โทเค็นไม่ถูกต้อง (${reason})<br><br>
             กรุณาเริ่มจาก <b>testV2GenToken.html</b>
           `;
         }
       });
     </script>
-
   <main class="glass-card">
     <div class="corner-orb"></div>
     <div class="corner-orb-2"></div>
