--- a/home/testV2GenToken.html
+++ b/home/testV2GenToken.html
@@ -1,9 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <meta charset="UTF-8">
+  <title>Gen Token V2</title>
+</head>
 <body>
+  <div>กำลังสร้างโทเคนใหม่...</div>
+
   <script src="https://taithai-tai.github.io/app/token.js"></script>
-    <script>
-        // ทุกครั้งที่เปิดหน้านี้ → สร้างโทเคนใหม่ แล้วส่งไปหน้า testV2home.html
-      Token.create({ target: "testV2home.html" });
-    </script>
+  <script>
+    // ทุกครั้งที่เปิดหน้านี้ → สร้างโทเคนใหม่ แล้วส่งไปหน้า testV2home.html
+    Token.create({ target: "testV2home.html" });
+  </script>
 </body>
 </html>
